--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,5 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
+  "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx2G -Xms100m",
 }
