--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "clean": "rm -rf dist && mkdir dist",
     "compile": "npx tsc --noEmit",
     "eslint": "npx eslint src",
-    "bundle": "npx esbuild --bundle --sourcemap --target=es2018 --outdir=dist --format=esm --minify --splitting src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
+    "bundle-and-minify": "npx esbuild --bundle --sourcemap --target=es2018 --outdir=dist --minify --format=esm --splitting src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
+    "bundle": "npx esbuild --bundle --sourcemap --target=es2018 --outdir=dist --format=esm --splitting src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
     "bundle-integration-tests": "npx esbuild --bundle --sourcemap --target=es2018 --outdir=dist --format=esm test/integration/integration-tests.ts",
     "unit-tests": "npx ts-node test/runtests.ts",
     "integration-tests": "npm run bundle-integration-tests && TIZZY_ITEST_RELATIVE_FILENAME=test/integration/integration-tests.html npx ts-node lib/run-integration-tests.ts",
     "e2e-tests": "npx ts-node test/e2e/run-e2e-tests.ts",
     "test": "npm run unit-tests && npm run integration-tests && npm run e2e-tests",
-    "bt": "npm run compile && npm run bundle && npm run test",
+    "build": "npm run compile && npm run bundle",
+    "bt": "npm run build && npm run test",
     "cbt": "npm run clean && npm run bt",
     "audit": "npm audit --omit dev",
     "watch": "npx chokidar-cli 'src/**/*.*' --initial -c 'npm run bt'",
