--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,11 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.7.6</version>
+                <version>1.12.1</version>
                 <executions>
                     <execution>
                         <id>install node and npm</id>
+                        <phase>generate-resources</phase>
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
@@ -55,7 +56,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <nodeVersion>v13.12.0</nodeVersion>
+                    <nodeVersion>v16.15.1</nodeVersion>
                 </configuration>
             </plugin>
             <plugin>
